{
  "version": 4,
  "terraform_version": "1.4.2",
  "serial": 668,
  "lineage": "6cb340ac-8a3c-2515-8ded-e5218286560a",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:880856668551:internet-gateway/igw-0e1398f2ad3ad7a37",
            "id": "igw-0e1398f2ad3ad7a37",
            "owner_id": "880856668551",
            "tags": {
              "Name": "multiverse"
            },
            "tags_all": {
              "Name": "multiverse"
            },
            "vpc_id": "vpc-06603f0d3f0454223"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:880856668551:loadbalancer/app/mvws92023032618553411770000000b/574bbcf75081f63f",
            "arn_suffix": "app/mvws92023032618553411770000000b/574bbcf75081f63f",
            "desync_mitigation_mode": "defensive",
            "dns_name": "mvws92023032618553411770000000b-486224535.eu-west-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:eu-west-2:880856668551:loadbalancer/app/mvws92023032618553411770000000b/574bbcf75081f63f",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "mvws92023032618553411770000000b",
            "name_prefix": "mvws9",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0f410bcebb084fb58"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-02f3a87b701b97208"
              },
              {
                "subnet_id": "subnet-0c94e81dacd34b5a1"
              }
            ],
            "subnets": [
              "subnet-02f3a87b701b97208",
              "subnet-0c94e81dacd34b5a1"
            ],
            "tags": {
              "Name": "multiverse"
            },
            "tags_all": {
              "Name": "multiverse"
            },
            "vpc_id": "vpc-06603f0d3f0454223",
            "xff_header_processing_mode": "append",
            "zone_id": "ZHURV8PSTC4K8"
          },
          "dependencies": [
            "aws_security_group.alb",
            "aws_subnet.public",
            "aws_vpc.this",
            "data.aws_availability_zones.eu_west_2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:880856668551:listener/app/mvws92023032618553411770000000b/574bbcf75081f63f/eb39d17b7a42e9c0",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:880856668551:targetgroup/mvws920230326185531619400000008/facecd7820343679",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:880856668551:listener/app/mvws92023032618553411770000000b/574bbcf75081f63f/eb39d17b7a42e9c0",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-2:880856668551:loadbalancer/app/mvws92023032618553411770000000b/574bbcf75081f63f",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.this",
            "aws_lb_target_group.http",
            "aws_security_group.alb",
            "aws_subnet.public",
            "aws_vpc.this",
            "data.aws_availability_zones.eu_west_2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:880856668551:targetgroup/mvws920230326185531619400000008/facecd7820343679",
            "arn_suffix": "targetgroup/mvws920230326185531619400000008/facecd7820343679",
            "connection_termination": false,
            "deregistration_delay": "0",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:880856668551:targetgroup/mvws920230326185531619400000008/facecd7820343679",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "mvws920230326185531619400000008",
            "name_prefix": "mvws9",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-06603f0d3f0454223"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0e1398f2ad3ad7a37",
            "id": "r-rtb-0991de8cb9cc268171080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0991de8cb9cc26817",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.this",
            "aws_route_table.public",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:880856668551:route-table/rtb-0991de8cb9cc26817",
            "id": "rtb-0991de8cb9cc26817",
            "owner_id": "880856668551",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e1398f2ad3ad7a37",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-06603f0d3f0454223"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "1",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03330c2bb54a7dc79",
            "route_table_id": "rtb-0991de8cb9cc26817",
            "subnet_id": "subnet-02f3a87b701b97208"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.this",
            "data.aws_availability_zones.eu_west_2"
          ]
        },
        {
          "index_key": "2",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0122b75d6c3125799",
            "route_table_id": "rtb-0991de8cb9cc26817",
            "subnet_id": "subnet-0c94e81dacd34b5a1"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.this",
            "data.aws_availability_zones.eu_west_2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:880856668551:security-group/sg-0f410bcebb084fb58",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-087f36f2ff227d468"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "id": "sg-0f410bcebb084fb58",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "mvws9-alb20230326185531615500000006",
            "name_prefix": "mvws9-alb",
            "owner_id": "880856668551",
            "revoke_rules_on_delete": true,
            "tags": {
              "Name": "multiverse-alb"
            },
            "tags_all": {
              "Name": "multiverse-alb"
            },
            "timeouts": null,
            "vpc_id": "vpc-06603f0d3f0454223"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:880856668551:security-group/sg-087f36f2ff227d468",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              }
            ],
            "id": "sg-087f36f2ff227d468",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0f410bcebb084fb58"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "mvws9-ec220230326185531608300000005",
            "name_prefix": "mvws9-ec2",
            "owner_id": "880856668551",
            "revoke_rules_on_delete": true,
            "tags": {
              "Name": "multiverse-ec2"
            },
            "tags_all": {
              "Name": "multiverse-ec2"
            },
            "timeouts": null,
            "vpc_id": "vpc-06603f0d3f0454223"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "alb_from_web_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 80,
            "id": "sgrule-2772752674",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0f410bcebb084fb58",
            "security_group_rule_id": "sgr-01aef054ee5c1d7a6",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "alb_to_ec2_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "",
            "from_port": 80,
            "id": "sgrule-1783052900",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0f410bcebb084fb58",
            "security_group_rule_id": "sgr-08dfbfa2a31ef3cf2",
            "self": false,
            "source_security_group_id": "sg-087f36f2ff227d468",
            "timeouts": null,
            "to_port": 80,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb",
            "aws_security_group.ec2",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ec2_from_alb_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "",
            "from_port": 80,
            "id": "sgrule-1985727406",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-087f36f2ff227d468",
            "security_group_rule_id": "sgr-04380f073e3cf9215",
            "self": false,
            "source_security_group_id": "sg-0f410bcebb084fb58",
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb",
            "aws_security_group.ec2",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ec2_to_web_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-3078612373",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-087f36f2ff227d468",
            "security_group_rule_id": "sgr-052ca9dff769a3bbf",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.ec2",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:880856668551:subnet/subnet-02f3a87b701b97208",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02f3a87b701b97208",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "880856668551",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "multiverse-1"
            },
            "tags_all": {
              "Name": "multiverse-1"
            },
            "vpc_id": "vpc-06603f0d3f0454223"
          },
          "dependencies": [
            "aws_vpc.this",
            "data.aws_availability_zones.eu_west_2"
          ]
        },
        {
          "index_key": "2",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:880856668551:subnet/subnet-0c94e81dacd34b5a1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2c",
            "availability_zone_id": "euw2-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c94e81dacd34b5a1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "880856668551",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "multiverse-2"
            },
            "tags_all": {
              "Name": "multiverse-2"
            },
            "vpc_id": "vpc-06603f0d3f0454223"
          },
          "dependencies": [
            "aws_vpc.this",
            "data.aws_availability_zones.eu_west_2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:880856668551:vpc/vpc-06603f0d3f0454223",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0fcd1a950e19dea76",
            "default_route_table_id": "rtb-027c1c9414b5a0856",
            "default_security_group_id": "sg-0dc59f003951631a9",
            "dhcp_options_id": "dopt-02f59f6bcb3ba7e60",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-06603f0d3f0454223",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-027c1c9414b5a0856",
            "owner_id": "880856668551",
            "tags": {
              "Name": "multiverse"
            },
            "tags_all": {
              "Name": "multiverse"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "s3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:880856668551:vpc-endpoint/vpce-0dcac338dc1389346",
            "cidr_blocks": [
              "52.95.150.0/24",
              "52.95.191.0/24",
              "52.95.142.0/23",
              "16.12.16.0/23",
              "3.5.244.0/22",
              "52.219.219.0/24",
              "52.95.144.0/24",
              "52.95.148.0/23",
              "16.12.15.0/24"
            ],
            "id": "vpce-0dcac338dc1389346",
            "owner_id": "880856668551",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-7ca54015",
            "private_dns_enabled": false,
            "requester_managed": false,
            "route_table_ids": [
              "rtb-0991de8cb9cc26817"
            ],
            "service_name": "com.amazonaws.eu-west-2.s3",
            "state": "available",
            "tags": {
              "Name": "multiverse"
            },
            "tags_all": {
              "Name": "multiverse"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-06603f0d3f0454223"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    }
  ]
}